--- a/one_page/sass/style.scss
+++ b/one_page/sass/style.scss
@@ -27,10 +27,11 @@ a {
     }
     // mp.scss
     .themepic_block {
-        &:before {
-            background-image: url('../images/themepicbg02.jpg');
-            background-color: #306d7e;
-        }
+        // &:before {
+        //     background-image: url('../images/themepicbg02.jpg');
+        //     background-color: #306d7e;
+        // }
+       
     }
     .theme_dat_block {
         .back_signup {
@@ -173,10 +174,10 @@ a {
     }
     // mp.scss
     .themepic_block {
-        &:before {
-            background-image: url('../images/themepicbg03.jpg');
-            background-color: #393938;
-        }
+        // &:before {
+        //     background-image: url('../images/themepicbg03.jpg');
+        //     background-color: #393938;
+        // }
     }
     .theme_dat_block {
         .back_signup {
@@ -319,10 +320,10 @@ a {
     }
     // mp.scss
     .themepic_block {
-        &:before {
-            background-image: url('../images/themepicbg04.jpg');
-            background-color: #393938;
-        }
+        // &:before {
+        //     background-image: url('../images/themepicbg04.jpg');
+        //     background-color: #393938;
+        // }
     }
     .theme_dat_block {
         .back_signup {
@@ -465,10 +466,10 @@ a {
     }
     // mp.scss
     .themepic_block {
-        &:before {
-            background-image: url('../images/themepicbg05.jpg');
-            background-color: #393938;
-        }
+        // &:before {
+        //     background-image: url('../images/themepicbg05.jpg');
+        //     background-color: #393938;
+        // }
     }
     .theme_dat_block {
         .back_signup {
