--- a/one_page/sass/page/_mp.scss
+++ b/one_page/sass/page/_mp.scss
@@ -71,10 +71,12 @@ a[href*="http"] {
    
     &:before {
         content: '';
-        background-image: url('../images/themepicbg01.jpg');
-        background-repeat: repeat-x;
-        background-position: 0 0;
-        background-color: #383838;
+        // background-image: url('../images/themepicbg01.jpg');
+        // background-repeat: repeat-x;
+        // background-position: 0 0;
+        // background-color: #383838;
+        // background-color: #626262;
+        background-color: #7d7d7d;
         width: 100%;
         position: absolute;
         top: 0;
@@ -92,6 +94,29 @@ a[href*="http"] {
     .themepic {
         position: relative;
         z-index: 9;
+        &:before{
+            content:'';
+            width:300px; 
+            height: 100%;
+            background: linear-gradient(90deg, rgba(125,125,125,1) 0%, rgba(125,125,125,1) 40%, rgba(125,125,125,0) 100%);
+            position: absolute;
+            left:0;
+            top:0;
+        }
+        &:after{
+            content:'';
+            width:300px;
+            height: 100%;
+            background: linear-gradient(90deg, rgba(125,125,125,0) 0%, rgba(125,125,125,1) 60%, rgba(125,125,125,1) 100%);
+            position: absolute;
+            right:0;
+            top:0;
+        }
+        @include screen('mobile'){
+             &:before, &:after{
+                display: none;
+             }
+        }
         @include screen('notebook') {
             img {
                 width: 100%;
