--- a/one_page/sass/style.scss
+++ b/one_page/sass/style.scss
@@ -31,7 +31,7 @@ a {
             background-image: url('../images/themepicbg02.jpg');
             background-repeat: repeat-x;
             background-position: 0 0;
-            background-color: #306d7e;
+            background-color: transparent;
         }
         .themepic {
             &:before, &:after {
