--- a/one_page/sass/sass/_nojs.scss
+++ b/one_page/sass/sass/_nojs.scss
@@ -7,7 +7,7 @@ a.goCenter {
     padding: 0 .5em;
     height: 2em;
     line-height: 2em;
-    background: $secondaryColor;
+    background: #666;
     color: #fff;
     text-decoration: none;
     z-index: 999999999999;
@@ -22,6 +22,7 @@ a.goCenter {
         outline: none;
         top: 0;
         opacity: 1;
+        color: #fff;
     }
 }
 // no-js
