--- a/mulit_page/sass/page/_sp.scss
+++ b/mulit_page/sass/page/_sp.scss
@@ -17,7 +17,7 @@ h3 {
 }
 h4 {
     font-size: 1.125em;
-    color: nth($lightColor, $style);
+    color: nth($primaryColor, $style);
     margin:10px 0 ;
     padding: 0;
     position: relative;
