--- a/mulit_page/sass/sass/_table.scss
+++ b/mulit_page/sass/sass/_table.scss
@@ -3,6 +3,10 @@ table {
     width: 100%;
     margin: 0 0 30px;
     border-collapse: collapse;
+    border: #999 1px solid;
+    @include screen('mobile'){
+        border:none;
+    }
     @include screen('xs_mobile') {
         width: 100%;
     }
@@ -10,9 +14,9 @@ table {
     td {
         padding: 1em 1em;
         text-align: left;
+        border: #999 1px solid;
     }
     td {
-        border-bottom: #c9c9c9 1px solid;
         word-break: break-all;
         background-color: rgba(250, 250, 250, .9);
         color: #444;
@@ -38,21 +42,21 @@ table {
         text-align: center;
         white-space: nowrap;
         position: relative;
-         font-weight: 600;
-        &:before {
-            content: '';
-            width: 1px;
-            height: 18px;
-            background-color: rgba(255, 255, 255, .5);
-            position: absolute;
-            left: 0;
-            top: 1.2em;
-        }
-        &:first-child {
-            &:before {
-                display: none;
-            }
-        }
+        font-weight: 600;
+        // &:before {
+        //     content: '';
+        //     width: 1px;
+        //     height: 18px;
+        //     background-color: rgba(255, 255, 255, .5);
+        //     position: absolute;
+        //     left: 0;
+        //     top: 1.2em;
+        // }
+        // &:first-child {
+        //     &:before {
+        //         display: none;
+        //     }
+        // }
     }
     &.table_hover {
         tr:hover {
@@ -81,17 +85,20 @@ table {
             left: -9999px;
         }
         tr {
-            border-top: 8px solid #c9c9c9;
-            margin-bottom: 10px; // background-color: #333;
+            border-top: 5px solid #c9c9c9;
+            margin-bottom: 25px;
         }
         td {
             // Behave  like a "row"
             border: none !important;
-            border-bottom: 1px solid #c9c9c9 !important;
+            border: #999 1px solid !important;
+            border-top: none !important;
             position: relative;
+            padding: .6em;
             padding-left: 35% !important;
             white-space: normal;
             text-align: left;
+            min-height: 50px;
             &:before {
                 content: attr(data-title);
                 position: absolute;
@@ -99,45 +106,46 @@ table {
                 left: 0;
                 bottom: 0;
                 width: 30%;
-                padding: .8em 1em;
+                padding: 10px;
                 background-color: nth($primaryColor, $style);
                 white-space: nowrap;
-                text-align: center;
+                text-align: left;
+                font-size: .938em;
                 font-weight: bold;
                 color: #fff;
                 @include box-sizing;
             }
         }
     }
-    @media(max-width: 480px) {
-        table {}
-        tr {
-            border: #c9c9c9 1px solid;
-            border-bottom: none;
-            margin-bottom: 25px; // background-color: #333;
-        }
-        td {
-            padding-left: .8em !important;
-            &:before {
-                content: attr(data-title);
-                position: relative;
-                top: 0;
-                left: 0;
-                bottom: 0;
-                width: auto;
-                padding: .3em .5em .5em 0;
-                background-color: rgba(250, 250, 250, .9) !important;
-                white-space: nowrap;
-                text-align: left;
-                font-weight: bold;
-                display: block;
-                font-size: 1.125em;
-                font-weight: 700;
-                color: nth($primaryColor, $style);
-                @include box-sizing;
-            }
-        }
-    }
+    // @media(max-width: 480px) {
+    //     table {}
+    //     tr {
+    //         border: #c9c9c9 1px solid;
+    //         border-bottom: none;
+    //         margin-bottom: 25px; // background-color: #333;
+    //     }
+    //     td {
+    //         padding-left: .8em !important;
+    //         &:before {
+    //             content: attr(data-title);
+    //             position: relative;
+    //             top: 0;
+    //             left: 0;
+    //             bottom: 0;
+    //             width: auto;
+    //             padding: .3em .5em .5em 0;
+    //             background-color: rgba(250, 250, 250, .9) !important;
+    //             white-space: nowrap;
+    //             text-align: left;
+    //             font-weight: bold;
+    //             display: block;
+    //             font-size: 1.125em;
+    //             font-weight: 700;
+    //             color: nth($primaryColor, $style);
+    //             @include box-sizing;
+    //         }
+    //     }
+    // }
 }
 // fix_th_table
 .fix_th_table {
@@ -378,45 +386,44 @@ table {
 }
 // 活動
 .activity_Tb, .memberTb {
-    border: 1px solid #ccc;
-     background-color: #eee;
-    padding: 10px 30px 20px;
+    border: 1px solid #ddd;
+    background-color: #eee;
+    padding: 15px;
     margin: 0 0 30px;
     border-radius: 5px;
     @include box-sizing;
     table {
         margin: 0;
         th {
-            background-color: #eee;
-            color:#333;
+            background-color: nth($primaryColor, $style);
+            color: #fff;
             position: relative;
-            background-color: transparent!important;
-            border-bottom: #ddd 1px solid;
+            border: #999 1px solid;
             text-align: left;
             vertical-align: top;
             width: 20%;
             // border-left:5px solid nth($primaryColor, $style);
-            &:after {
-                content: '';
-                position: absolute;
-                width: 5px;
-                height: 25px;
-                left: 0;
-                top: 15px;
-                background-color: nth($primaryColor, $style);
-            }
+            // &:after {
+            //     content: '';
+            //     position: absolute;
+            //     width: 5px;
+            //     height: 25px;
+            //     left: 0;
+            //     top: 15px;
+            //     background-color: nth($primaryColor, $style);
+            // }
         }
         td {
-            border-bottom: #ddd 1px solid;
-             background-color: transparent;
+            border: #999 1px solid;
+            background-color:#fff;
         }
     }
-   @media(max-width: 480px) {
-        background-color: #eee;
-        padding: 10px 20px 20px;
-        th, td {
-            display: block;
-              width: 100%!important;
-        }
-    }
+    // @media(max-width: 480px) {
+    //     background-color: #eee;
+    //     padding: 10px 20px 20px;
+    //     th, td {
+    //         display: block;
+    //         width: 100% !important;
+    //     }
+    // }
 }
