--- a/mulit_page/sass/style.scss
+++ b/mulit_page/sass/style.scss
@@ -102,7 +102,7 @@
         }
     }
     h4 {
-        color: nth($lightColor, $style);
+        color: nth($primaryColor, $style);
     }
     // _table.scss
     table {
@@ -118,19 +118,20 @@
                 }
             }
         }
-        @media(max-width: 480px) {
-            td {
-                &:before {
-                    color: nth($primaryColor, $style);
-                }
-            }
-        }
+        // @media(max-width: 480px) {
+        //     td {
+        //         &:before {
+        //             color: nth($primaryColor, $style);
+        //         }
+        //     }
+        // }
     }
     .activity_Tb, .memberTb {
         th {
-            &:after {
-                background-color: nth($primaryColor, $style);
-            }
+            background-color: nth($primaryColor, $style);
+            // &:after {
+            //     background-color: nth($primaryColor, $style);
+            // }
         }
     }
     // _form.scss
@@ -242,7 +243,7 @@
         }
     }
     h4 {
-        color: nth($lightColor, $style);
+        color: nth($primaryColor, $style);
     }
     // _table.scss
     table {
@@ -258,19 +259,20 @@
                 }
             }
         }
-        @media(max-width: 480px) {
-            td {
-                &:before {
-                    color: nth($primaryColor, $style);
-                }
-            }
-        }
+        // @media(max-width: 480px) {
+        //     td {
+        //         &:before {
+        //             color: nth($primaryColor, $style);
+        //         }
+        //     }
+        // }
     }
     .activity_Tb, .memberTb {
         th {
-            &:after {
-                background-color: nth($primaryColor, $style);
-            }
+            background-color: nth($primaryColor, $style);
+            // &:after {
+            //     background-color: nth($primaryColor, $style);
+            // }
         }
     }
     // _form.scss
@@ -382,7 +384,7 @@
         }
     }
     h4 {
-        color: nth($lightColor, $style);
+        color: nth($primaryColor, $style);
     }
     // _table.scss
     table {
@@ -398,19 +400,20 @@
                 }
             }
         }
-        @media(max-width: 480px) {
-            td {
-                &:before {
-                    color: nth($primaryColor, $style);
-                }
-            }
-        }
+        // @media(max-width: 480px) {
+        //     td {
+        //         &:before {
+        //             color: nth($primaryColor, $style);
+        //         }
+        //     }
+        // }
     }
     .activity_Tb, .memberTb {
         th {
-            &:after {
-                background-color: nth($primaryColor, $style);
-            }
+            background-color: nth($primaryColor, $style);
+            // &:after {
+            //     background-color: nth($primaryColor, $style);
+            // }
         }
     }
     // _form.scss
@@ -522,7 +525,7 @@
         }
     }
     h4 {
-        color: nth($lightColor, $style);
+        color: nth($primaryColor, $style);
     }
     // _table.scss
     table {
@@ -538,19 +541,20 @@
                 }
             }
         }
-        @media(max-width: 480px) {
-            td {
-                &:before {
-                    color: nth($primaryColor, $style);
-                }
-            }
-        }
+        // @media(max-width: 480px) {
+        //     td {
+        //         &:before {
+        //             color: nth($primaryColor, $style);
+        //         }
+        //     }
+        // }
     }
     .activity_Tb, .memberTb {
         th {
-            &:after {
-                background-color: nth($primaryColor, $style);
-            }
+            background-color: nth($primaryColor, $style);
+            // &:after {
+            //     background-color: nth($primaryColor, $style);
+            // }
         }
     }
     // _form.scss
