--- a/one_page/sass/sass/_table.scss
+++ b/one_page/sass/sass/_table.scss
@@ -3,6 +3,10 @@ table {
     width: 100%;
     margin: 0 0 30px;
     border-collapse: collapse;
+    border: #999 1px solid;
+    @include screen('mobile'){
+        border:none;
+    }
     @include screen('xs_mobile') {
         width: 100%;
     }
@@ -12,7 +16,7 @@ table {
         text-align: left;
     }
     td {
-        border-bottom: #c9c9c9 1px solid;
+        border: #999 1px solid;
         word-break: break-all;
         background-color: rgba(250, 250, 250, .9);
         color: #444;
@@ -46,20 +50,21 @@ table {
         text-align: center;
         white-space: nowrap;
         position: relative;
-        &:before {
-            content: '';
-            width: 1px;
-            height: 18px;
-            background-color: rgba(255, 255, 255, .5);
-            position: absolute;
-            left: 0;
-            top: 1.2em;
-        }
-        &:first-child {
-            &:before {
-                display: none;
-            }
-        }
+        border: #999 1px solid;
+        // &:before {
+        //     content: '';
+        //     width: 1px;
+        //     height: 18px;
+        //     background-color: rgba(255, 255, 255, .5);
+        //     position: absolute;
+        //     left: 0;
+        //     top: 1.2em;
+        // }
+        // &:first-child {
+        //     &:before {
+        //         display: none;
+        //     }
+        // }
     }
     &.table_hover {
         tr:hover {
@@ -71,14 +76,14 @@ table {
             background: #F5F5F5;
         }
     }
-    thead {
-        border-right: nth($secondaryColor, $style) 8px solid;
-        border-left: nth($secondaryColor, $style) 8px solid;
-    }
-    tbody {
-        border-right: #fafafa 8px solid;
-        border-left: #fafafa 8px solid;
-    }
+    // thead {
+    //     border-right: nth($secondaryColor, $style) 8px solid;
+    //     border-left: nth($secondaryColor, $style) 8px solid;
+    // }
+    // tbody {
+    //     border-right: #fafafa 8px solid;
+    //     border-left: #fafafa 8px solid;
+    // }
     &.style2 {
         thead {
             border-right: nth($primaryColor, $style) 8px solid;
@@ -118,72 +123,77 @@ table {
             border-left: none;
         }
         tr {
-            border-top: 8px solid #c9c9c9;
+            border-top: 5px solid #c9c9c9;
             margin-bottom: 25px;
         }
         td {
             // Behave  like a "row"
             border: none !important;
-            border-bottom: 1px solid #c9c9c9 !important;
+            border: #999 1px solid !important;
+            border-top:none !important;
             position: relative;
+            padding:.6em;
             padding-left: 35% !important;
             white-space: normal;
             text-align: left;
+            min-height: 50px;
             &:before {
                 content: attr(data-title);
                 position: absolute;
+                white-space: wrap;
                 top: 0;
                 left: 0;
                 bottom: 0;
                 width: 30%;
-                padding: .8em 1em;
+                padding:10px;
                 background-color: nth($secondaryColor, $style);
                 white-space: nowrap;
-                text-align: center;
+                text-align: left;
+                font-size: .938em;
                 font-weight: bold;
                 color: #fff;
                 @include box-sizing;
             }
         }
     }
-    @media(max-width: 480px) {
-        table {
-            &.style2 {
-                td {
-                    &:before {
-                        background-color: #fff;
-                        color: nth($primaryColor, $style);
-                    }
-                }
-            }
-        }
-        tr {
-            border: #c9c9c9 1px solid;
-            border-bottom: none;
-            margin-bottom: 25px; // background-color: #333;
-        }
-        td {
-            padding-left: .8em !important;
-            &:before {
-                content: attr(data-title);
-                position: relative;
-                top: 0;
-                left: 0;
-                bottom: 0;
-                width: auto;
-                padding: .3em .5em .5em 0;
-                background-color: rgba(250, 250, 250, .9)!important;
-                white-space: nowrap;
-                text-align: left;
-                font-weight: bold;
-                display: block;
-                font-size: 1.125em;
-                font-weight: 700;
-                color: nth($secondaryColor, $style);
-                @include box-sizing;
-            }
-        }
-    }
+    // @media(max-width: 480px) {
+    //     table {
+    //         &.style2 {
+    //             td {
+    //                 &:before {
+    //                     background-color: #fff;
+    //                     color: nth($primaryColor, $style);
+    //                 }
+    //             }
+    //         }
+    //     }
+    //     tr {
+    //         border: #c9c9c9 1px solid;
+    //         border-bottom: none;
+    //         margin-bottom: 25px; // background-color: #333;
+    //     }
+    //     td {
+    //         padding-left: .8em !important;
+    //         &:before {
+    //             content: attr(data-title);
+    //             position: relative;
+    //             top: 0;
+    //             left: 0;
+    //             bottom: 0;
+    //             width: auto;
+    //             padding: .3em .5em .5em 0;
+    //             background-color: rgba(250, 250, 250, .9)!important;
+    //             white-space: nowrap;
+    //             text-align: left;
+    //             font-weight: bold;
+    //             display: block;
+    //             font-size: 1.125em;
+    //             font-weight: 700;
+    //             color: nth($secondaryColor, $style);
+    //             @include box-sizing;
+    //         }
+    //     }
+    // }
 }
 // fix_th_table
 .fix_th_table {
