--- a/one_page/sass/page/_mp.scss
+++ b/one_page/sass/page/_mp.scss
@@ -83,7 +83,7 @@ a[href*="http"] {
         right: 0;
         bottom: 0;
         left: 0;
-        z-index: 2;
+        // z-index: 1;
         @media(max-width: 1200px) {
             background-image: none;
         }
@@ -93,7 +93,7 @@ a[href*="http"] {
     }
     .themepic {
         position: relative;
-        z-index: 9;
+        // z-index: 2;
         &:before{
             content:'';
             width:300px; 
@@ -158,7 +158,7 @@ a[href*="http"] {
     padding-bottom: 190px;
     @include box-sizing;
     position: relative;
-    z-index: 9;
+    // z-index: 9;
     @include screen('mobile') {
         margin: 0;
     }
@@ -211,16 +211,28 @@ a[href*="http"] {
         float: none;
         position: relative;
         border-radius: 5px 5px 0 0;
+         z-index: 1;
+
         &:before {
             content: '';
             height: 300px;
             width: 100%;
-            background-color: #fff;
+         /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#ffffff+1,ffffff+99&1+80,0+99 */
+background: -moz-linear-gradient(top,  rgba(255,255,255,1) 1%, rgba(255,255,255,1) 80%, rgba(255,255,255,0) 99%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 1%,rgba(255,255,255,1) 80%,rgba(255,255,255,0) 99%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom,  rgba(255,255,255,1) 1%,rgba(255,255,255,1) 80%,rgba(255,255,255,0) 99%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=0 ); /* IE6-9 */
+
+
+
+
             position: absolute;
             left: 0;
             bottom: -170px;
             transform: skewY(-10deg);
+
         }
+        
         ul {
             display: inline-block;
             list-style-type: none;
@@ -307,7 +319,7 @@ p {
     margin-top: -360px;
     margin-bottom: 65px;
     position: relative;
-    z-index: 9;
+    z-index: 1;
     .container {
         padding: 0 60px !important;
         @include screen('mobile') {
@@ -323,7 +335,7 @@ p {
 .activities_block {
     margin-bottom: 65px;
     position: relative;
-    z-index: 8;
+    // z-index: 8;
     &:before {
         content: '';
         background-image: url('../images/themebg01.jpg');
@@ -333,7 +345,7 @@ p {
         position: absolute;
         top: -350px;
         right: 0;
-        z-index: 1;
+        
     }
     .container {
         padding: 0 60px !important;
@@ -375,7 +387,7 @@ p {
 .activity_description_block {
     margin-bottom: 65px;
     position: relative;
-    z-index: 7;
+    // z-index: 7;
     &:before {
         content: '';
         background-image: url('../images/themebg02.jpg');
@@ -385,7 +397,7 @@ p {
         position: absolute;
         top: -350px;
         left: 0;
-        z-index: 1;
+        // z-index: 1;
     }
     .container {
         position: relative;
