--- a/mulit_page/sass/sass/_menu.scss
+++ b/mulit_page/sass/sass/_menu.scss
@@ -182,6 +182,8 @@
         margin-left: -160px;
         background-color: #fff;
         border-radius: 0 0 30px 0;
+        height: 100%;
+        overflow-y: auto;
         >ul {
             >li {
                 margin-bottom: 15px;
