--- a/mulit_page/sass/page/_template.scss
+++ b/mulit_page/sass/page/_template.scss
@@ -15,6 +15,35 @@ body {
         margin: 0;
         padding: 0;
     }
+    // scrollbar
+    /* Turn on custom 8px wide scrollbar */
+    ::-webkit-scrollbar {
+        width: 10px;
+        /* 1px wider than Lion. */
+        /* This is more usable for users trying to click it. */
+        background-color: rgba(0, 0, 0, 0);
+        -webkit-border-radius: 100px;
+    }
+    /* hover effect for both scrollbar area, and scrollbar 'thumb' */
+    ::-webkit-scrollbar:hover {
+        background-color: rgba(0, 0, 0, 0);
+    }
+    /* The scrollbar 'thumb' ...that marque oval shape in a scrollbar */
+    ::-webkit-scrollbar-thumb:vertical {
+        /* This is the EXACT color of Mac OS scrollbars. 
+     Yes, I pulled out digital color meter */
+        background: rgba(0, 0, 0, 0.2);
+        -webkit-border-radius: 100px;
+        background-clip: padding-box;
+        border: 2px solid rgba(0, 0, 0, 0);
+        min-height: 10px;
+        /*Prevent it from getting too small */
+    }
+    ::-webkit-scrollbar-thumb:vertical:active {
+        background: rgba(0, 0, 0, 0.2);
+        /* Some darker color when you click it */
+        -webkit-border-radius: 100px;
+    }
     &.menu_vertical {
         position: relative;
         .header {
