--- a/one_page/sass/page/_mp.scss
+++ b/one_page/sass/page/_mp.scss
@@ -68,14 +68,12 @@ a[href*="http"] {
     padding: 0;
     margin: 0;
     position: relative;
-   
     &:before {
         content: '';
         // background-image: url('../images/themepicbg01.jpg');
         // background-repeat: repeat-x;
         // background-position: 0 0;
         // background-color: #383838;
-        
         background-color: #a0a0a0;
         width: 100%;
         position: absolute;
@@ -94,28 +92,28 @@ a[href*="http"] {
     .themepic {
         position: relative;
         // z-index: 2;
-        &:before{
-            content:'';
-            width:300px; 
+        &:before {
+            content: '';
+            width: 300px;
             height: 100%;
-            background: linear-gradient(90deg, rgba(160,160,160,1) 0%, rgba(160,160,160,1) 20%, rgba(160,160,160,0) 100%);
+            background: linear-gradient(90deg, rgba(160, 160, 160, 1) 0%, rgba(160, 160, 160, 1) 20%, rgba(160, 160, 160, 0) 100%);
             position: absolute;
-            left:0;
-            top:0;
+            left: 0;
+            top: 0;
         }
-        &:after{
-            content:'';
-            width:300px;
+        &:after {
+            content: '';
+            width: 300px;
             height: 100%;
-            background: linear-gradient(90deg, rgba(160,160,160,0) 0%, rgba(160,160,160,1) 80%, rgba(160,160,160,1) 100%);
+            background: linear-gradient(90deg, rgba(160, 160, 160, 0) 0%, rgba(160, 160, 160, 1) 80%, rgba(160, 160, 160, 1) 100%);
             position: absolute;
-            right:0;
-            top:0;
+            right: 0;
+            top: 0;
         }
-        @include screen('mobile'){
-             &:before, &:after{
+        @include screen('mobile') {
+            &:before, &:after {
                 display: none;
-             }
+            }
         }
         @include screen('notebook') {
             img {
@@ -164,9 +162,9 @@ a[href*="http"] {
     }
     .container {
         padding: 0 25px;
-         @include screen('mobile'){
+        @include screen('mobile') {
             padding: 0 15px;
-         }
+        }
     }
     // 回個人報名首頁
     .back_signup {
@@ -211,28 +209,25 @@ a[href*="http"] {
         float: none;
         position: relative;
         border-radius: 5px 5px 0 0;
-         z-index: 1;
-
+        z-index: 1;
         &:before {
             content: '';
             height: 300px;
             width: 100%;
-         /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#ffffff+1,ffffff+99&1+80,0+99 */
-background: -moz-linear-gradient(top,  rgba(255,255,255,1) 1%, rgba(255,255,255,1) 80%, rgba(255,255,255,0) 99%); /* FF3.6-15 */
-background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 1%,rgba(255,255,255,1) 80%,rgba(255,255,255,0) 99%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to bottom,  rgba(255,255,255,1) 1%,rgba(255,255,255,1) 80%,rgba(255,255,255,0) 99%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=0 ); /* IE6-9 */
-
-
-
-
+            /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#ffffff+1,ffffff+99&1+80,0+99 */
+            background: -moz-linear-gradient(top, rgba(255, 255, 255, 1) 1%, rgba(255, 255, 255, 1) 80%, rgba(255, 255, 255, 0) 99%);
+            /* FF3.6-15 */
+            background: -webkit-linear-gradient(top, rgba(255, 255, 255, 1) 1%, rgba(255, 255, 255, 1) 80%, rgba(255, 255, 255, 0) 99%);
+            /* Chrome10-25,Safari5.1-6 */
+            background: linear-gradient(to bottom, rgba(255, 255, 255, 1) 1%, rgba(255, 255, 255, 1) 80%, rgba(255, 255, 255, 0) 99%);
+            /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+            filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#00ffffff', GradientType=0);
+            /* IE6-9 */
             position: absolute;
             left: 0;
             bottom: -170px;
             transform: skewY(-10deg);
-
         }
-        
         ul {
             display: inline-block;
             list-style-type: none;
@@ -328,7 +323,6 @@ p {
         @media(max-width: 480px) {
             padding: 0 15px !important;
         }
-        
     }
 }
 // 活動內容
@@ -345,7 +339,6 @@ p {
         position: absolute;
         top: -350px;
         right: 0;
-        
     }
     .container {
         padding: 0 60px !important;
@@ -361,8 +354,9 @@ p {
         text-align: left;
         position: relative;
         z-index: 2;
+        line-height: 2em;
         ol {
-            margin: 0 0 0 20px;
+            margin: 0 0 30px 20px;
             padding: 0;
             li {
                 font-size: 1.125em;
@@ -379,6 +373,17 @@ p {
                         font-weight: normal;
                     }
                 }
+            }
+        }
+        img {
+            float: left;
+            margin: 0px 2em 1.5em 0;
+            max-width: 380px !important;
+            @include screen('mobile') {
+                float: none;
+                width: 100% !important;
+                max-width: 100% !important;
+                margin: 0px auto 1.5em;
             }
         }
     }
@@ -413,8 +418,9 @@ p {
         text-align: left;
         position: relative;
         z-index: 2;
+        line-height: 2em;
         ol {
-            margin: 0 0 50px 20px;
+            margin: 0 0 30px 20px;
             padding: 0;
             li {
                 margin: 0 0 15px;
@@ -428,6 +434,17 @@ p {
                 margin: 0 0 15px;
                 list-style-type: disc;
                 line-height: 1.8em;
+            }
+        }
+        img {
+            float: left;
+            margin: 0px 2em 1.5em 0;
+            max-width: 380px !important;
+            @include screen('mobile') {
+                float: none;
+                width: 100% !important;
+                max-width: 100% !important;
+                margin: 0px auto 1.5em;
             }
         }
     }
