--- a/one_page/sass/page/_mp.scss
+++ b/one_page/sass/page/_mp.scss
@@ -402,10 +402,36 @@ p {
                 margin-bottom: 2em;
             }
         }
+        .image_anysize {
+            max-width: 100%;
+            margin: 0px auto 1.5em;
+            overflow: hidden;
+            padding: 0;
+            display: block;
+            img {
+                margin: 0 auto 5px;
+                display: block;
+            }
+            span {
+                text-align: center;
+                display: block;
+                color: $color-red;
+            }
+            @include screen('mobile') {
+                max-width: 100%;
+                width: 100%;
+                margin: 0px auto;
+                display: block;
+                margin-bottom: 2em;
+            }
+        }
         img {
-            float: left;
-            margin: 0px 2em 1.5em 0;
-            max-width: 380px !important;
+            float: none;
+            margin: 0px auto 1.5em;
+            max-width: 100% !important;
+            text-align: center;
+            display: block;
+            border-radius: 5px;
             @include screen('mobile') {
                 float: none;
                 width: 100% !important;
@@ -490,10 +516,36 @@ p {
                 margin-bottom: 2em;
             }
         }
+        .image_anysize {
+            max-width: 100%;
+            margin: 0px auto 1.5em;
+            overflow: hidden;
+            padding: 0;
+            display: block;
+            img {
+                margin: 0 auto 5px;
+                display: block;
+            }
+            span {
+                text-align: center;
+                display: block;
+                color: $color-red;
+            }
+            @include screen('mobile') {
+                max-width: 100%;
+                width: 100%;
+                margin: 0px auto;
+                display: block;
+                margin-bottom: 2em;
+            }
+        }
         img {
-            float: left;
-            margin: 0px 2em 1.5em 0;
-            max-width: 380px !important;
+            float: none;
+            margin: 0px auto 1.5em;
+            max-width: 100% !important;
+            text-align: center;
+            display: block;
+            border-radius: 5px;
             @include screen('mobile') {
                 float: none;
                 width: 100% !important;
